fix footer label spacing

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,4 +210,5 @@ footer {
 
 .footer__label {
     font-size: 14px;
+    text-align: center;
 }
